# BetterNoteFormatter

./: .gitignore  README.md  app.py  controller.py  pyproject.toml  requirements.txt  test.py  view.py
src/: controller.py  pdf_processor.py
src/pdfsidemargin/: __main__.py  controller.py  main.py  pdf_processor.py  view.py
